--- a/test/test.html
+++ b/test/test.html
@@ -1,8 +1,12 @@
-<html>
-    <head>
-        <title>Some bullian</title>
-    </head>
-    <body>
-        <p>Uwu. What is this?</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test</title>
+</head>
+<body>
+    <p>Uwu. Whai is this?</p>
+</body>
 </html>
